objects/Nemovitost__c/Nemovitost__c.object-meta.xml
<CustomObject>
    <description>Nemovitost vlastníka (půda)</description>
    <label>Nemovitost</label>
    <nameField>
        <label>Název Nemovitosti</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nemovitosti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>