objects/Nemovitost__c/fields/Celkova_vymera_v_ha__c.field-meta.xml
<CustomField>
    <fullName>Celkova_vymera_v_ha__c</fullName>
    <label>Celková výměra v ha</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>