objects/Nemovitost__c/fields/Doplnujici_info__c.field-meta.xml
<CustomField>
    <fullName>Doplnujici_info__c</fullName>
    <label>Doplňující info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>