objects/Nemovitost__c/fields/GPS_latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_latitude__c</fullName>
    <label>GPS latitude</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>