objects/Nemovitost__c/fields/GPS_longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_longitude__c</fullName>
    <label>GPS longitude</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>