objects/Nemovitost__c/fields/Katastralni_uzemi__c.field-meta.xml
<CustomField>
    <fullName>Katastralni_uzemi__c</fullName>
    <label>Katastrální území</label>
    <type>TextArea</type>
</CustomField>