objects/Nemovitost__c/fields/Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Kontakt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nemovitosti</relationshipLabel>
    <relationshipName>Nemovitosti</relationshipName>
    <type>Lookup</type>
</CustomField>