objects/Nemovitost__c/fields/Kraj__c.field-meta.xml
<CustomField>
    <fullName>Kraj__c</fullName>
    <label>Kraj</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hlavní město Praha</fullName>
            </value>
            <value>
                <fullName>Středočeský kraj</fullName>
            </value>
            <value>
                <fullName>Jihočeský kraj</fullName>
            </value>
            <value>
                <fullName>Plzeňský kraj</fullName>
            </value>
            <value>
                <fullName>Karlovarský kraj</fullName>
            </value>
            <value>
                <fullName>Ústecký kraj</fullName>
            </value>
            <value>
                <fullName>Liberecký kraj</fullName>
            </value>
            <value>
                <fullName>Královéhradecký kraj</fullName>
            </value>
            <value>
                <fullName>Pardubický kraj</fullName>
            </value>
            <value>
                <fullName>Kraj Vysočina</fullName>
            </value>
            <value>
                <fullName>Jihomoravský kraj</fullName>
            </value>
            <value>
                <fullName>Olomoucký kraj</fullName>
            </value>
            <value>
                <fullName>Zlínský kraj</fullName>
            </value>
            <value>
                <fullName>Moravskoslezský kraj</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>