objects/Nemovitost__c/fields/Potencialni_vymera_v_ha__c.field-meta.xml
<CustomField>
    <fullName>Potencialni_vymera_v_ha__c</fullName>
    <label>Potenciální výměra v ha</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>