objects/Nemovitost__c/fields/Resena_vymera_v_ha__c.field-meta.xml
<CustomField>
    <fullName>Resena_vymera_v_ha__c</fullName>
    <label>Řešená výměra v ha</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>