objects/Nemovitost__c/fields/Typ_vlastnika__c.field-meta.xml
<CustomField>
    <fullName>Typ_vlastnika__c</fullName>
    <label>Typ vlastníka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fyzická osoba</fullName>
            </value>
            <value>
                <fullName>Právnická osoba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>