objects/Nemovitost__c/fields/Ucast__c.field-meta.xml
<CustomField>
    <fullName>Ucast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Účast</label>
    <referenceTo>Ucast__c</referenceTo>
    <relationshipLabel>Nemovitosti</relationshipLabel>
    <relationshipName>Nemovitosti</relationshipName>
    <type>Lookup</type>
</CustomField>