objects/Nemovitost__c/fields/Zmena_dosazena_v_ha__c.field-meta.xml
<CustomField>
    <fullName>Zmena_dosazena_v_ha__c</fullName>
    <label>Změna dosažená v ha</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>